--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ wght@100;200;300;400;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,30
     <div class="row">
         <div class="about-col">
             <hi>Conheça-nos mais</hi>
-            <p>Somos uma empresa séria que se dedica a fazer o melhor para o nosso clientes!
+            <p>Somos uma empresa séria que se dedica a fazer o melhor para os nossos clientes!
                 Sempre buscamos ter um bom atendimento, entregamos os nosso produtos rapidamente, 
                 buscando sempre agradar os nossos clientes.
             </p>
