--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ wght@100;200;300;400;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,30
             <p>Se você quer ter produtos de qualidade e ainda economizar, você está no
                 lugar certo. <br>Venha fazer parte dos nossos clientes!
             </p>
-            <a href="" class="hero-btn">Conheça-nos mais!</a>
+            <a href="https://wa.me/qr/X46N4M5M56ZFP1" class="hero-btn">Conheça-nos mais!</a>
         </div>
 
     </section>
@@ -118,7 +118,7 @@ wght@100;200;300;400;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,30
         <div class="facilities-col">
             <img src="images/ovos.jpg"> 
             <h3>Bandeja de Ovos</h3>
-            <p>Vendemos por unidade e também a bandeja completa. Qualidade de ovos Extras
+            <p>Vendemos por unidade e também a bandeja completa. Qualidade de ovos Extras.
             </p>
         </div>
 
@@ -186,7 +186,7 @@ wght@100;200;300;400;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,30
 
 <section class="cta">
     <h1>Conheça mais a nossa loja!</h1>
-    <a href="" class="hero-btn">Clique já</a>
+    <a href="https://wa.me/qr/X46N4M5M56ZFP1" class="hero-btn">Clique já</a>
 
 </section>
 
